Add iperfd to the standard build, since we sometimes use it as the client side of the magent

--- a/pelab/GNUmakefile
+++ b/pelab/GNUmakefile
@@ -6,7 +6,7 @@
 # Standalone makefile for building Flexlab binaries
 #
 
-SUBDIRS = libnetmon magent
+SUBDIRS = libnetmon magent iperfd
 
 all:   all-subdirs
 clean: clean-subdirs
