Add template_startrun to list of symbolic links to create and update help screen for template_startrun.

--- a/xmlrpc/GNUmakefile.in
+++ b/xmlrpc/GNUmakefile.in
@@ -33,7 +33,7 @@ SYMLINKS        = node_admin node_reboot os_load create_image node_list \
 		  readycount nscheck startexp batchexp startexp swapexp endexp \
 		  modexp expinfo node_avail tbuisp expwait template_commit \
 		  template_export template_swapin template_swapout \
-		  template_stoprun template_instantiate
+		  template_stoprun template_instantiate template_startrun
 
 #
 # Force dependencies on the scripts so that they will be rerun through
