Check it some changes from Keith Sklower to aid in building when the control net is not routable.

--- a/os/imagezip/ntfs/libntfs/GNUmakefile.in
+++ b/os/imagezip/ntfs/libntfs/GNUmakefile.in
@@ -71,7 +71,7 @@ $(SRCS): $(LIBSRCDIR)/patched
 
 $(LIBSRCDIR)/patched:
 	@if [ -n "$(LOCALPKGHOST)" ]; then \
-	    if [ ! `$(FETCH) http://$(LOCALPKGHOST)/downloads/$(NTFSVER).tar.gz` ]; then \
+	    if [ `$(FETCH) http://$(LOCALPKGHOST)/downloads/$(NTFSVER).tar.gz` ]; then \
 		$(FETCH) http://$(PKGHOST)/downloads/$(NTFSVER).tar.gz; \
 	    fi \
 	else \
